docs(docs-topbar): fix z-index issue

--- a/src/docs/components/docs-topbar/docs-topbar.css
+++ b/src/docs/components/docs-topbar/docs-topbar.css
@@ -1,6 +1,6 @@
 .docs-topbar {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   left: 0;
   right: 0;
